# UniZK

./: Cargo.toml  LICENSE  README.md  clean.sh  dependency.sh  docker.sh  run_cpu_test.sh  run_plonky2_test.sh  run_plonky2_test_2.sh  run_starky_test.sh
configs/: Cargo.toml  Cargo.toml.v0.1  aes_starky.yaml  aes_starky_recursive.yaml  crop.yaml  ecdsa.yaml  fac_starky.yaml  fac_starky_recursive.yaml  factorial.yaml  fib_starky.yaml  fib_starky_recursive.yaml  fibonacci.yaml  mvm.yaml  mvm_8_32.yaml  sha256.yaml  sha256_starky.yaml  sha256_starky_recursive.yaml
examples/: aes_starky.rs  aes_starky_recursive.rs  cpu_aes_starky.rs  cpu_ecdsa.rs  cpu_fac_starky.rs  cpu_factorial.rs  cpu_fib_starky.rs  cpu_fibonacci.rs  cpu_img_crop.rs  cpu_mvm.rs  cpu_sha256.rs  cpu_sha256_starky.rs  ecdsa.rs  ecdsa_veri.rs  fac_starky.rs  fac_starky_recursive.rs  factorial.rs  fib_starky.rs  fib_starky_recursive.rs  fibonacci.rs  img_crop.rs  mvm.rs  sha256.rs  sha256_starky.rs  sha256_starky_recursive.rs
src/: lib.rs  util.rs
src/config/: arch_config.rs  enable_config.rs  mod.rs  ram_config.rs
src/kernel/: fft.rs  filter_drain.rs  hash_no_pad.rs  kernel.rs  lru.rs  memory_copy.rs  mod.rs  transpose.rs  tree.rs  vector_chain.rs  vector_operation.rs
src/memory/: memory_allocator.rs  mod.rs
src/plonk/: challenger.rs  gates.rs  mod.rs  oracle.rs  proofs.rs  prover.rs  vanishing_poly.rs  vars.rs  zero_poly_coset.rs
src/starky/: constraint_consumer.rs  mod.rs  proof.rs  prover.rs  stark.rs  vanishing_poly.rs
src/system/: system.rs
src/trace/: trace.rs
